Fixed the loader
Fixes issue #8

--- a/public/stylesheet/loader.css
+++ b/public/stylesheet/loader.css
@@ -1,7 +1,7 @@
 .loading {
   position: absolute;
   top: 12px;
-	left: 730px;	
+	right: 12px;	
 	width: 20px;
 	height: 20px;
 	border-style: solid;
