--- a/public/stylesheet/loader.css
+++ b/public/stylesheet/loader.css
@@ -1,35 +1,33 @@
 .loading {
-  position: absolute;
-  top: 12px;
-	right: 12px;	
-	width: 20px;
-	height: 20px;
-	border-style: solid;
-	border-radius: 20px;				
-	border-width: 5px;
-  border-color: green white green white;
-	-webkit-animation: revolve 1s linear infinite; 
-	-moz-animation: revolve 1s linear infinite;
-	animation: revolve 1s linear infinite; /* IE10+ */  
+  margin: -3.2em 1em 0px auto;
+  width: 30px;
+  height: 30px;
+  border-style: solid;
+  border-radius: 30px;				
+  border-width: 3px;
+  border-color: #FFFFFF #428BCA #FFFFFF #428BCA;
+  -webkit-animation: revolve 1s linear infinite; 
+  -moz-animation: revolve 1s linear infinite;
+  animation: revolve 1s linear infinite; /* IE10+ */  
 }
 
 @-webkit-keyframes revolve  
 {  
-	from { -webkit-transform: rotate(0deg); }  
-	50%  { -webkit-transform: rotate(180deg); }  
-	to   { -webkit-transform: rotate(360deg); }  
+  from { -webkit-transform: rotate(0deg); }
+  50%  { -webkit-transform: rotate(180deg); }
+  to   { -webkit-transform: rotate(360deg); }
 }
 
 @-moz-keyframes revolve  
 {  
-	from { -moz-transform: rotate(0deg); }  
-	50%  { -moz-transform: rotate(180deg); }  
-	to   { -moz-transform: rotate(360deg); }  
+  from { -moz-transform: rotate(0deg); }  
+  50%  { -moz-transform: rotate(180deg); }  
+  to   { -moz-transform: rotate(360deg); }  
 }
 
 @keyframes revolve  /* IE10+ */
 {  
-	from { transform: rotate(0deg); }  
-	50%  { transform: rotate(180deg); }  
-	to   { transform: rotate(360deg); }  
+  from { transform: rotate(0deg); }  
+  50%  { transform: rotate(180deg); }  
+  to   { transform: rotate(360deg); }  
 }
