--- a/views/layout.html
+++ b/views/layout.html
@@ -1,7 +1,8 @@
 <html>
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# headtoapp: http://ogp.me/ns/fb/headtoapp#">
 
-  <title>Headto</title>
+{{{ yield-meta }}}
+{{{ yield-title }}}
 
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -12,7 +13,6 @@
 </head>
 
 <body>
-
 <div id="fb-root"></div>
 <script type="text/javascript">
 
@@ -35,20 +35,25 @@
 
 </script>
 
-<div class="col-md-offset-4 col-md-4 text-center">
-  <h1 class="title"><a href="/">Headto</a></h1>
+<div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-offset-4 text-center">
+
+<div class="row title">
+  <h1><a href="/">Headto</a></h1>
   <p>Tell your friends where you are heading.</p>
-
-  <div class="search">
-    <input class="typeahead" type="text" placeholder="Where are you heading?"><span id="loader"></span>
-  </div>
-
-  <div class="result"></div>
 </div>
+
+<div class="row search">
+  <input class="typeahead" type="text" placeholder="Where are you heading?">
+  <div id="loader"></div>
+</div>
+
+{{{ yield }}}
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js"></script>
 <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.js"></script>
 <script src="/javascript/frontend.js"></script>
+
+</div>
 </body>
 </html>
