--- a/views/layout.html
+++ b/views/layout.html
@@ -49,6 +49,15 @@
 
 {{{ yield }}}
 
+<div class="footer">
+  <p>
+    Get the <a href="http://github.com/paramaggarwal/headtoapp">code</a>.
+    Location data by <a href="http://foursquare.com">Foursquare</a>.<br>
+    Follow the creators <a href="http://twitter.com/paramaggarwal">@paramaggarwal</a> and 
+    <a href="http://twitter.com/chetan1507">@chetan1507</a>.
+  </p>
+</div>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js"></script>
 <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.js"></script>
