Fixed #11 display issue in Firefox

--- a/views/layout.html
+++ b/views/layout.html
@@ -43,7 +43,7 @@
 </div>
 
 <div class="row search">
-  <input class="typeahead" type="text" placeholder="Where are you heading?">
+  <input class="typeahead" type="text" placeholder="Where are you heading?"></input>
   <div id="loader"></div>
 </div>
 
