--- a/public/stylesheet/typeahead.css
+++ b/public/stylesheet/typeahead.css
@@ -17,22 +17,25 @@ div {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  position: relative;
+  *z-index: 1;
 }
 
 .typeahead,
 .tt-query,
 .tt-hint {
   width: 100%;
-  height: 2em;
-  padding: 1em;
+  height: 2.5em;
+  padding: 0.5em;
   font-size: 2em;
+  line-height: 2.5em;
   border: 2px solid #ccc;
-  border-radius: 5px;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
   outline: none;
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .typeahead {
