--- a/views/layout.html
+++ b/views/layout.html
@@ -60,7 +60,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js"></script>
-<script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.js"></script>
+<script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
 <script src="/javascript/frontend.js"></script>
 
 </div>
